Bug 1085740 - Reduce heap churn caused by TempAllocator. r=jandem.